--- a/extension.ini
+++ b/extension.ini
@@ -11,3 +11,4 @@ Developer: Giovanni Salmeri
 Tag: feature
 system/extensions/music.php: music.php, create, update
 system/extensions/music.js: music.js, create, update
+system/extensions/music-abcjs.js: music.js, create, update
