Added careful to CSSs

--- a/extension.ini
+++ b/extension.ini
@@ -12,3 +12,4 @@ Tag: feature
 system/extensions/music.php: music.php, create, update
 system/extensions/music.js: music.js, create, update
 system/extensions/music-abcjs.js: music.js, create, update
+system/extensions/music.css: music.js, create, update, careful
