--- a/extension.ini
+++ b/extension.ini
@@ -3,7 +3,7 @@
 Extension: Music
 Version: 0.8.18
 Description: Display music scores.
-HelpUrl: https://github.com/GiovanniSalmeri/yellow-music/
+DocumentationUrl: https://github.com/GiovanniSalmeri/yellow-music/
 DownloadUrl: https://github.com/GiovanniSalmeri/yellow-music/archive/master.zip
 Published: 2020-12-12 23:30:00
 Status: unpublished
