--- a/extension.ini
+++ b/extension.ini
@@ -2,7 +2,7 @@
 
 Extension: Music
 Version: 0.8.18
-Description: Display music scores.
+Description: Music scores.
 DocumentationUrl: https://github.com/GiovanniSalmeri/yellow-music/
 DownloadUrl: https://github.com/GiovanniSalmeri/yellow-music/archive/main.zip
 Published: 2020-12-12 23:30:00
