Clean up extension.ini

--- a/extension.ini
+++ b/extension.ini
@@ -3,11 +3,11 @@
 Extension: Music
 Version: 0.8.18
 Description: Music scores.
-DocumentationUrl: https://github.com/GiovanniSalmeri/yellow-music/
 DownloadUrl: https://github.com/GiovanniSalmeri/yellow-music/archive/refs/heads/main.zip
-Published: 2020-12-12 23:30:00
-Status: unpublished
+DocumentationUrl: https://github.com/GiovanniSalmeri/yellow-music/
+DocumentationLanguage: en
 Developer: Giovanni Salmeri
+Status: experimental
 Tag: feature
 system/extensions/music.php: music.php, create, update
 system/extensions/music.js: music.js, create, update
