New API 0.9, various fixes

--- a/extension.ini
+++ b/extension.ini
@@ -1,15 +1,15 @@
 # Datenstrom Yellow extension settings
 
 Extension: Music
-Version: 0.8.18
+Version: 0.9.1
 Description: Music scores.
+Developer: Giovanni Salmeri
+Tag: feature
 DownloadUrl: https://github.com/GiovanniSalmeri/yellow-music/archive/refs/heads/main.zip
 DocumentationUrl: https://github.com/GiovanniSalmeri/yellow-music/
-DocumentationLanguage: en
-Developer: Giovanni Salmeri
+Published: 2024-04-25 20:30:00
 Status: experimental
-Tag: feature
-system/extensions/music.php: music.php, create, update
-system/extensions/music.js: music.js, create, update
-system/extensions/music-abcjs.js: music.js, create, update
-system/extensions/music.css: music.js, create, update, careful
+system/workers/music.php: music.php, create, update
+system/workers/music.js: music.js, create, update
+system/workers/music-abcjs.js: music.js, create, update
+system/workers/music.css: music.js, create, update
